adding new styles

--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/test.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+     <!-- Title and Description for SEO -->
+    <title>Growvyn - Empower YourSelf</title>
+    <meta 
+      name="description" 
+      content="Join Growvyn and unlock your potential with self-development tools, effective habits, and personalized plans. Discover the path to personal growth and lasting success today." 
+    />
+    <!-- Keywords (Optional) -->
+    <meta 
+      name="keywords" 
+      content="self-development, personal growth, productivity, mindfulness, goal setting, life coaching, habits" 
+    />
+    <!-- Author -->
+    <meta name="author" content="Growvyn Team" />
+     <!-- Open Graph Metadata (For Social Sharing) -->
+    <meta property="og:title" content="Growvyn - Empower Your Self-Development Journey" />
+    <meta property="og:description" content="Join Growvyn and unlock your potential with self-development tools and personalized plans." />
+    <meta property="og:image" content="/images/test.png" />
+    <meta property="og:url" content="https://www.growvyn.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Favicon -->
+    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" /> -->
+
+
   </head>
   <body>
     <div id="root"></div>
