--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <!-- Title and Description for SEO -->
-    <title>Growvyn - Empower YourSelf</title>
+    <title>Growvyn</title>
     <meta 
       name="description" 
       content="Join Growvyn and unlock your potential with self-development tools, effective habits, and personalized plans. Discover the path to personal growth and lasting success today." 
@@ -14,22 +14,31 @@
     <!-- Keywords (Optional) -->
     <meta 
       name="keywords" 
-      content="self-development, personal growth, productivity, mindfulness, goal setting, life coaching, habits" 
+      content="Growvyn, growvyn, grown, self-development, life grow, empowered, growving, growth, grow, app self-development, business growth, growth strategies, self-development, personal growth, productivity, mindfulness, goal setting, life coaching, habits" 
     />
     <!-- Author -->
     <meta name="author" content="Growvyn Team" />
      <!-- Open Graph Metadata (For Social Sharing) -->
-    <meta property="og:title" content="Growvyn - Empower Your Self-Development Journey" />
+    <meta property="og:title" content="Growvyn" />
     <meta property="og:description" content="Join Growvyn and unlock your potential with self-development tools and personalized plans." />
     <meta property="og:image" content="/images/test.png" />
     <meta property="og:url" content="https://www.growvyn.com" />
     <meta property="og:type" content="website" />
+    <meta name="robots" content="index, follow" />
 
     <!-- Favicon -->
     <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" /> -->
-
-
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Growvyn",
+        "url": "https://www.growvyn.com",
+        "logo": "",
+        "description": "Growvyn helps you achieve your business growth goals with innovative strategies and tools."
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
