--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="description" 
       content="Join Growvyn and unlock your potential with self-development tools, effective habits, and personalized plans. Discover the path to personal growth and lasting success today." 
     />
+    <meta name="google-site-verification" content="kZHyydIzjvqB7CP48jDDzfSL4siYevys6pd21d0HiUE" />
     <!-- Keywords (Optional) -->
     <meta 
       name="keywords" 
