background and new tag

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         "description": "Growvyn helps you achieve your business growth goals with innovative strategies and tools."
       }
     </script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FPP4GNNH9Q"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-FPP4GNNH9Q');
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
