starting new project

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <title>Growvyn</title>
     <meta 
       name="description" 
-      content="Join Growvyn and unlock your potential with self-development tools, effective habits, and personalized plans. Discover the path to personal growth and lasting success today." 
+      content="Welcome to Growvyn, the official website of Growvyn. Discover our services, vision, and how we’re transforming self-development." 
     />
     <meta name="google-site-verification" content="kZHyydIzjvqB7CP48jDDzfSL4siYevys6pd21d0HiUE" />
+    <meta name="google-site-verification" content="XFabuJb-D9bNrf09zzi8wOu7-CaX0UU8qyUrOyDxwXU" />
+
     <!-- Keywords (Optional) -->
     <meta 
       name="keywords" 
-      content="Growvyn, growvyn, grown, self-development, life grow, empowered, growving, growth, grow, app self-development, business growth, growth strategies, self-development, personal growth, productivity, mindfulness, goal setting, life coaching, habits" 
+      content="Growvyn, growvyn, grown, grownvyn , self-development, life grow, empowered, growving, growth, grow, app self-development, self-development, personal growth, productivity, mindfulness, goal setting, life coaching, habits" 
     />
     <!-- Author -->
     <meta name="author" content="Growvyn Team" />
@@ -36,8 +38,9 @@
         "@type": "Organization",
         "name": "Growvyn",
         "url": "https://www.growvyn.com",
-        "logo": "",
-        "description": "Growvyn helps you achieve your business growth goals with innovative strategies and tools."
+        "logo": "https://www.growvyn.com/images/logo.png",
+        "description": "Growvyn helps you achieve your growth goals and self-development with automated tools.",
+        "sameAs": ["https://www.instagram.com/growvyn"]
       }
     </script>
 
