adding theme settings to the page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         "url": "https://www.growvyn.com",
         "logo": "https://www.growvyn.com/images/logo.png",
         "description": "Growvyn helps you achieve your growth goals and self-development with automated tools.",
-        "sameAs": ["https://www.instagram.com/growvyn"]
+        "sameAs": ["https://www.instagram.com/growvyn", "https://www.facebook.com/profile.php?id=61567876286578", " https://x.com/growvyn", "https://www.youtube.com/@Growvyn"]
       }
     </script>
 
