fixing some design and change logo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/test.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/newLogo.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <!-- Title and Description for SEO -->
@@ -38,7 +38,7 @@
         "@type": "Organization",
         "name": "Growvyn",
         "url": "https://www.growvyn.com",
-        "logo": "https://www.growvyn.com/images/logo.png",
+        "logo": "https://www.growvyn.com/images/newLogo.png",
         "description": "Growvyn helps you achieve your growth goals and self-development with automated tools.",
         "sameAs": ["https://www.instagram.com/growvyn", "https://www.facebook.com/profile.php?id=61567876286578", " https://x.com/growvyn", "https://www.youtube.com/@Growvyn"]
       }
