--- a/index.html
+++ b/index.html
@@ -2,56 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/newLogo.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/onlyLogo.webp" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <!-- Title and Description for SEO -->
-    <title>Growvyn</title>
+    <title>Millary – Experiencias Gastronómicas de La Araucanía</title>
+
     <meta 
       name="description" 
-      content="Welcome to Growvyn, the official website of Growvyn. Discover our services, vision, and how we’re transforming self-development." 
+      content="Millary ofrece experiencias gastronómicas únicas en La Araucanía, destacando ingredientes locales como piñones, changles, murta y más. Coffee Breaks, almuerzos ejecutivos, cenas y cocktails para eventos inolvidables." 
     />
-    <meta name="google-site-verification" content="kZHyydIzjvqB7CP48jDDzfSL4siYevys6pd21d0HiUE" />
-    <meta name="google-site-verification" content="XFabuJb-D9bNrf09zzi8wOu7-CaX0UU8qyUrOyDxwXU" />
 
-    <!-- Keywords (Optional) -->
+
+    <!-- Keywords -->
     <meta 
       name="keywords" 
-      content="Growvyn, growvyn, grown, grownvyn , self-development, life grow, empowered, growving, growth, grow, app self-development, self-development, personal growth, productivity, mindfulness, goal setting, life coaching, habits" 
+      content="Millary, gastronomía, Araucanía, cenas experiencia, coffee break, catering ejecutivo, productos locales, changles, murta, piñones, cocina chilena, eventos, cocktail, servicios gastronómicos, cocina fusión" 
     />
+
     <!-- Author -->
-    <meta name="author" content="Growvyn Team" />
-     <!-- Open Graph Metadata (For Social Sharing) -->
-    <meta property="og:title" content="Growvyn" />
-    <meta property="og:description" content="Join Growvyn and unlock your potential with self-development tools and personalized plans." />
-    <meta property="og:image" content="/images/test.png" />
-    <meta property="og:url" content="https://www.growvyn.com" />
+    <meta name="author" content="Millary Team" />
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="Millary – Experiencias Gastronómicas de La Araucanía" />
+    <meta property="og:description" content="Transformamos momentos especiales en experiencias culinarias inolvidables. Conoce nuestros servicios de catering con productos únicos del sur de Chile." />
+    <meta property="og:image" content="/images/og-millary.png" />
+    <meta property="og:url" content="https://www.millary.cl" />
     <meta property="og:type" content="website" />
+
+    <!-- Robots -->
     <meta name="robots" content="index, follow" />
 
     <!-- Favicon -->
     <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" /> -->
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Growvyn",
-        "url": "https://www.growvyn.com",
-        "logo": "https://www.growvyn.com/images/newLogo.png",
-        "description": "Growvyn helps you achieve your growth goals and self-development with automated tools.",
-        "sameAs": ["https://www.instagram.com/growvyn", "https://www.facebook.com/profile.php?id=61567876286578", " https://x.com/growvyn", "https://www.youtube.com/@Growvyn"]
-      }
-    </script>
-
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FPP4GNNH9Q"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
     
-      gtag('config', 'G-FPP4GNNH9Q');
-    </script>
+
+    
 
   </head>
   <body>
