--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Millary – Experiencias Gastronómicas de La Araucanía" />
     <meta property="og:description" content="Transformamos momentos especiales en experiencias culinarias inolvidables. Conoce nuestros servicios de catering con productos únicos del sur de Chile." />
-    <meta property="og:image" content="/images/og-millary.png" />
+    <meta property="og:image" content="/images/onlyLogo.png" />
     <meta property="og:url" content="https://www.millary.cl" />
     <meta property="og:type" content="website" />
 
